--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 <body>
     <!-- Inizio header -->
     <header>
-        
+        <nav class="nav flex">
+            <div class="flex">
+                <img class="logo" src="img/logo-small.png" alt="logo">
+                <ul class="flex nav-lista">
+                  <li><a href="#">Perche DropBox</a></li>
+                  <li><a href="#">Funzioni</a></li>
+                  <li><a href="#">Piani e Prezzi</a></li>
+                </ul>
+            </div>
+            <div class="flex">
+                <ul class="flex nav-lista">
+                  <li><a href="#">Supporto</a></li>
+                  <li><a href="#">Contatta l'ufficio vendite</a></li>
+                  <li><a href="#">Accedi</a></li>
+                </ul>
+                <button class="btn">Inizia</button>
+            </div>
+        </nav>
+
     </header>
     <!-- Fine header -->
     <!-- Inizio main -->
