main-section-uno

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>DropBox</title>
 </head>
 <body>
     <!-- Inizio header -->
@@ -32,7 +32,26 @@
     </header>
     <!-- Fine header -->
     <!-- Inizio main -->
-    <main></main>
+    <main>
+        <!-- prima sezione main -->
+        <section class="cont-main">
+            <h1>Tutto cio che ti serve per il lavoro, in un unico posto</h1>
+            <div class="destra-sinistra">
+              <div class="main-cont-destra">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, quisquam? Deserunt est quia beatae aliquid dolorum! Nobis delectus voluptas dolore, quibusdam et, minus dolorum accusamus voluptate molestias, ipsum eligendi ducimus.</p>
+                <button class="btn btn-mod">Inizia la tua prova gratuita</button>
+                <article>Annulla in qualsiasi momento</article>
+                <div class="entity">&#8595;</div>
+              </div>
+              <div class="main-cont-sinistra">
+                <img class="img" src="img/jumbo.png" alt="schermo">
+              </div>
+            </div>
+            
+
+        </section>
+        <!-- /prima sezione main -->
+    </main>
     <!-- Fine main -->
     
 </body>
