stuttura-main-seione-due

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Inizio main -->
     <main>
         <!-- prima sezione main -->
-        <section class="cont-main">
+        <section class="cont-main-one">
             <h1>Tutto cio che ti serve per il lavoro, in un unico posto</h1>
             <div class="destra-sinistra">
               <div class="main-cont-destra">
@@ -51,6 +51,20 @@
 
         </section>
         <!-- /prima sezione main -->
+        <!-- seconda sezione main -->
+        <section class="cont-main-two">
+            <h2>Trova il piano business che fa per te</h2>
+            <span><input type="radio">Fattura mensile</span>
+            <span><input type="radio">Fattura annuale</span>
+            <div class="tabelle">
+                <div class="tabella"></div>
+                <div class="tabella"></div>
+                <div class="tabella"></div>
+            </div>
+            <div class="tabella-quattro">
+    
+            </div>
+        </section>
     </main>
     <!-- Fine main -->
     
