--- a/index.html
+++ b/index.html
@@ -197,7 +197,20 @@
     
             </div>
         </section>
-        <!-- seconda sezione main -->
+        <!-- fine seconda sezione main -->
+        <!-- terza sezione main -->
+        <section class="cont-main-two flex">
+            <div class="imagine">
+                <img src="img/partner.png" alt="partner">
+            </div>
+            <div class="testo-cont">
+                <h3>Entra in contatto con un partner di DropBox</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quos dolores iure repellendus quisquam reiciendis, ea officia eligendi dolore veritatis dolorum recusandae sit eos reprehenderit excepturi in eaque natus porro?</p>
+                <button class="second-btn"> Trova un partner</button>
+
+            </div>
+        </section>
+        <!-- fine terza sezione main -->
     </main>
     <!-- Fine main -->
     
