--- a/index.html
+++ b/index.html
@@ -261,10 +261,11 @@
         </section>
         <!-- fine quinta sezione main -->
         <!-- sesta sezione main -->
-        <section>
-            <div></div>
-            <div></div>
-            <div></div>
+        <section id="section-six" class="flex">
+            <div class="colon left"></div>
+            <div class="colon center"></div>
+            <div class="colon right"></div>
+            <div class="colon-bottom"></div>
         </section>
     </main>
     <!-- Fine main -->
