--- a/index.html
+++ b/index.html
@@ -220,32 +220,32 @@
             <h2>Esegui piu operazioni con dropbox busness</h2>
             <div class="cont-box flex">
                 <div class="box">
-                    <img src="img/business-feature-switching-tools.png" alt="">
+                    <img src="img/business-feature-switching-tools.png" alt="img">
                     <h3>Titolo lunghissssssssssssimo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab natus quidem ducimus soluta, deserunt dolor distinctio temporibus nesciunt officia architecto culpa nobis eum eveniet quo minima dolore accusamus repellat.</p>
                 </div>
                 <div class="box">
-                    <img src="img/business-feature-send-files-it.png" alt="">
+                    <img src="img/business-feature-send-files-it.png" alt="img">
                     <h3>Titolo lunghissssssssssssimo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab natus quidem ducimus soluta, deserunt dolor distinctio temporibus nesciunt officia architecto culpa nobis eum eveniet quo minima dolore accusamus repellat.</p>
                 </div>
                 <div class="box">
-                    <img src="img/business-feature-security.png" alt="">
+                    <img src="img/business-feature-security.png" alt="img">
                     <h3>Titolo lunghissssssssssssimo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab natus quidem ducimus soluta, deserunt dolor distinctio temporibus nesciunt officia architecto culpa nobis eum eveniet quo minima dolore accusamus repellat.</p>
                 </div>
                 <div class="box">
-                    <img src="img/business-feature-multi-device.png" alt="">
+                    <img src="img/business-feature-multi-device.png" alt="img">
                     <h3>Titolo lunghissssssssssssimo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab natus quidem ducimus soluta, deserunt dolor distinctio temporibus nesciunt officia architecto culpa nobis eum eveniet quo minima dolore accusamus repellat.</p>
                 </div>
                 <div class="box">
-                    <img src="img/business-feature-integrations-it.png" alt="">
+                    <img src="img/business-feature-integrations-it.png" alt="img">
                     <h3>Titolo lunghissssssssssssimo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab natus quidem ducimus soluta, deserunt dolor distinctio temporibus nesciunt officia architecto culpa nobis eum eveniet quo minima dolore accusamus repellat.</p>
                 </div>
                 <div class="box">
-                    <img src="img/business-feature-coordinate-it.png" alt="">
+                    <img src="img/business-feature-coordinate-it.png" alt="img">
                     <h3>Titolo lunghissssssssssssimo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab natus quidem ducimus soluta, deserunt dolor distinctio temporibus nesciunt officia architecto culpa nobis eum eveniet quo minima dolore accusamus repellat.</p>
                 </div>
@@ -262,10 +262,66 @@
         <!-- fine quinta sezione main -->
         <!-- sesta sezione main -->
         <section id="section-six" class="flex">
-            <div class="colon left"></div>
-            <div class="colon center"></div>
-            <div class="colon right"></div>
-            <div class="colon-bottom"></div>
+            <div class="colon flex ">
+                <div class="colon-cont" id="logo-one">
+                    <img  src="img/designit.svg" alt="logo">
+                </div>
+                <div class="colon-cont" id="logo-two">
+                    <img src="img/arizona_state_university.svg" alt="logo">
+                </div>
+                <div class="colon-cont" id="logo-three">
+                    <img src="img/university_of_florida.svg" alt="logo">
+                </div>
+                <div class="colon-cont" id="logo-four">
+                    <img src="img/topps.svg" alt="logo">
+                </div>
+            </div>
+            <div class="colon center">
+                <img  src="img/designit.svg" alt="logo">
+                <hr>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam cupiditate doloremque dolore dolores nisi culpa nostrum? Modi ipsum quidem assumenda accusantium repellat hic, nesciunt quibusdam excepturi, minima quisquam dolorem quas.</p>
+                <article> Nome abastanza lungooo</article>
+                </div>
+                
+
+
+            </div>
+            <div class="colon flex ">
+                <div class="colon-cont"id="logo-five">
+                    <img src="img/world_bicycle_relief.svg" alt="logo">
+                </div>
+                <div class="colon-cont" id="logo-six">
+                    <img src="img/hearst_corp.svg" alt="logo">
+                </div>
+                <div class="colon-cont" id="logo-seven">
+                    <img src="img/lonely_planet.svg" alt="logo">
+                </div>
+                <div class="colon-cont" id="logo-eight">
+                    <img src="img/clear_channel.svg" alt="logo">
+                </div>
+            </div>
+            <div class="colon-bottom flex">
+                <h2>Porta DropBox nella tua azienda</h2>
+                <button class="btn-three">Inizia la tua prova gratuita</button>
+            </div>
+        </section>
+        <!-- fine sesta sezione main -->
+        <!-- settima sezione main -->
+        <section  id="section-seven" class="cont-main-two ">
+            <h2>Domande frequenti</h2>
+            <hr>
+            <div class="flex">
+              <article>domanda lunghina</article><i class="fa-solid fa-chevron-down"></i>
+            </div>  
+            <hr>
+            <div class="flex">
+              <article>domanda lunghina</article><i class="fa-solid fa-chevron-down"></i>
+            </div>  
+            <hr>
+            <div class="flex">
+              <article>domanda lunghina</article><i class="fa-solid fa-chevron-down"></i>
+            </div>  
+            <hr>
         </section>
     </main>
     <!-- Fine main -->
