struttura-footer-rotta

--- a/index.html
+++ b/index.html
@@ -325,6 +325,29 @@
         </section>
     </main>
     <!-- Fine main -->
+
+    
+   <footer>
+        <div class="footer-cont-top">
+            <div>
+                <h3>titolo</h3>
+                <ul>
+                    <li>bla </li>
+                    <li>bla</li>
+                    <li>bla</li>
+                    <li>bkf</li>
+                    <li>fkb</li>
+                </ul>
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+
+        </div>
+        <div class="footer-cont-bottom">
+        </div>
+    </footer> 
     
 </body>
 </html>
