target-blank-link

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>DropBox</title>
 </head>
@@ -19,15 +19,15 @@
         <nav class="nav flex">
                 <ul class="flex nav-lista">
                   <li> <img class="logo" src="img/logo-small.png" alt="logo"></li>
-                  <li><a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html">Perche DropBox</a></li>
-                  <li><a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html">Funzioni</a></li>
-                  <li><a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html">Piani e Prezzi</a></li>
+                  <li><a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html" target="_blank">Perche DropBox</a></li>
+                  <li><a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html" target="_blank">Funzioni</a></li>
+                  <li><a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html" target="_blank">Piani e Prezzi</a></li>
                 </ul>
-            <div class="flex">
+             <div class="flex">
                 <ul class="flex nav-lista">
-                  <li><a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html">Supporto</a></li>
-                  <li><a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html">Contatta l'ufficio vendite</a></li>
-                  <li><a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html">Accedi</a></li>
+                  <li><a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html" target="_blank">Supporto</a></li>
+                  <li><a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html" target="_blank">Contatta l'ufficio vendite</a></li>
+                  <li><a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html" target="_blank">Accedi</a></li>
                 </ul>
                 <button class="btn">Inizia</button>
             </div>
@@ -103,7 +103,7 @@
                         <button class="btn btn-mod-due">Prova Gratis per 100 giorni</button>
                         <div>
                             <span>oppure </span>
-                            <a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html">aquista ora</a>
+                            <a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html" target="_blank">aquista ora</a>
                         </div>
                         <hr>
 
@@ -143,7 +143,7 @@
                         <button class="btn btn-mod-due">Prova Gratis per 100 giorni</button>
                         <div>
                             <span>oppure </span>
-                            <a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html">aquista ora</a>
+                            <a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html" target="_blank">aquista ora</a>
                         </div>
                         <hr>
                         <div class="check">
@@ -182,7 +182,7 @@
                         <button class="btn btn-mod-due">Prova Gratis per 100 giorni</button>
                         <div>
                             <span>oppure </span>
-                            <a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html">aquista ora</a>
+                            <a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html" target="_blank">aquista ora</a>
                         </div>
                         <hr>
                         <div class="check">
@@ -279,7 +279,7 @@
         <!-- quinta sezione main -->
         <section id="section-five" class="cont-main-two">
             <h3>Piu di 500.000 aziende usano dropbox Business</h3>
-            <a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html">Scropi di piu sui nostri clienti</a>
+            <a href="file:///Users/vittoriaromano/Desktop/ESERCIZI%20BOOLEAN/link-dropbox/index.html" target="_blank">Scropi di piu sui nostri clienti</a>
         </section>
         <!-- fine quinta sezione main -->
         <!-- sesta sezione main -->
